# angelsaechsisch_telegram

./: .gitignore  README.md  pyproject.toml
angelsaechsisch_telegram/: __main__.py  bot.py  logik.py
angelsaechsisch_telegram/data/: antworten.txt  ausnahmen.txt
angelsaechsisch_telegram_bot/: __init__.py  bot.py  logik.py
angelsaechsisch_telegram_bot/data/: antworten.txt
angelsaechsisch_telegram_bot/scripts/: gen_data.py
